--- a/app/views/disciplines/index.html.erb
+++ b/app/views/disciplines/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Disciplines#index</h1>
-<p>Find me in app/views/disciplines/index.html.erb</p>
+<h1 name="top">Disciplines#index</h1>
+<table>
+  <% unless @disciplines.empty? %>
+    <%= @disciplines.each do |discipline| %>
+    <tr>
+      <td> <%= link_to discipline.name, discipline_path(discipline) %> </td>
+      <td> <%= link_to "Destroy", discipline_path(discipline), method: :delete %> </td>
+    </tr>
+    <% end %>
+  <% end %>
+  <tr>
+    <td> <%= link_to "Nova Disciplina", new_discipline_path %> </td>
+    <td> <%= link_to "Voltar ao Topo", '#top' %> </td>
+  </tr>
+</table>
