--- a/app/views/disciplines/show.html.erb
+++ b/app/views/disciplines/show.html.erb
@@ -1,2 +1,17 @@
-<h1>Disciplines#show</h1>
-<p>Find me in app/views/disciplines/show.html.erb</p>
+<h1 id=top> <%= @discipline.name.capitalize %></h1>
+
+<% unless @discipline.subject_matters.empty? %>
+<%= @discipline.subject_matters.each do |subject| %>
+  <table>
+    <tr> 
+      <td> <%= link_to subject.name, subject_matter_path(subject) %> </td> 
+      <td> <%= link_to "Destroy", subject_matter_path, method: :delete %> </td>
+    </tr>
+
+    <tr>
+      <td> </td>
+      <td> <%= link_to "Topo", "#top" %> </td>
+    </tr>
+  </table>
+<% end %>
+<% end %>
