--- a/app/views/subject_matters/edit.html.erb
+++ b/app/views/subject_matters/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>SubjectMatters#edit</h1>
-<p>Find me in app/views/subject_matters/edit.html.erb</p>
+<h1>SubjectMatter #edit</h1>
+<%= render 'form' %>
